fix comparison spacing

--- a/client/src/components/Comparison/comparison.scss
+++ b/client/src/components/Comparison/comparison.scss
@@ -20,7 +20,13 @@
     // border: 3px solid rgb(7, 71, 126);
     height: 15%;
     width: 100%;
+    padding-top: 30px;
     position: relative;
+
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    margin-bottom: 20px;
   }
 
   &-bottom {
@@ -48,6 +54,8 @@
         height: 12%;
         width: 100%;
         position: relative;
+        margin-left:2em;
+        // margin-bottom:3em;
       }
   
       .a-graphs {
@@ -118,4 +126,39 @@
   position: relative;
   height: 80%;
   width: 90%;
+}
+
+.pie-comparison {
+  margin-right: 0px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  margin-left: 8em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 400px;
+  max-width: 600px;
+
+  &__title {
+      margin-bottom: 5px;
+      margin-top: 18px;
+      align-self:flex-start;
+      margin-left: 40px;
+  }
+
+  &__bar {
+    max-width: 650px;
+    margin-left: 70px;
+  }
+
+}
+
+.button-toggle {
+  color:white;
+  height:40px;
+  // width:60px;
+  background-color: blue;
+  font-weight: bold;
+  // margin-right:10px;
+  border-radius: 15px;
 }
