--- a/client/src/styles/dashboard.scss
+++ b/client/src/styles/dashboard.scss
@@ -13,6 +13,7 @@
       width: 100%;
       min-height:100%;
       // overflow-y: hidden;
+      background-color: $content-background;
     }
 }
 
